k8s/domains/documents/infra/worker/base/documents-worker-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-documents-worker
spec:
  podSelector:
    matchLabels:
      app: documents-worker
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-documents-worker-dns
spec:
  podSelector:
    matchLabels:
      app: documents-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-documents-worker-to-postgres
spec:
  podSelector:
    matchLabels:
      app: documents-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: documents-postgres
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-documents-worker-to-nats
spec:
  podSelector:
    matchLabels:
      app: documents-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nats
          podSelector:
            matchLabels:
              app: nats
      ports:
        - protocol: TCP
          port: 4222
